<resources>
    <string name="app_name">I-have-quest</string>
    <string name="login">Login</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="log_in">Log In</string>
    <string name="register">Registration</string>
    <string name="i_have_quest">I have Quest</string>
    <string name="repeat_password">Repeat password</string>
    <string name="password_repeat">Password repeat</string>
    <string name="gender">Gender</string>
    <string name="registration">Registration</string>
    <string name="person">Person</string>
    <string name="backpack">Backpack</string>
    <string name="settings">Settings</string>
    <string name="quest">quest</string>
    <string name="map">map</string>
    <string name="current">current</string>
    <string name="new_quest">new</string>
    <string name="resources">Resources:</string>
    <string name="use">use</string>
    <string name="title">Title:</string>
    <string name="name">Name:</string>
    <string name="lvl">Lvl:</string>
    <string name="experience">experience:</string>
    <string name="characteristics">Characteristics</string>
    <string name="force">force:</string>
    <string name="defense">defense:</string>
    <string name="agility">agility:</string>
    <string name="health">health:</string>
    <string name="equipment">Equipment</string>
    <string name="professions">Professions</string>
    <string name="exception_longer">Must be longer than {min} and less than {max}</string>
    <string name="chat">chat</string>
    <string name="global">global</string>
    <string name="personal">personal</string>
    <string name="forum">forum</string>
    <string name="search">Search</string>
    <string name="your_message">Your message</string>
<!--    <string name="link_image_server">http://93.125.42.151:8080/IHaveQuest/image?id=</string>-->
    <string name="link_image_server">https://192.168.1.2:8080/IHaveQuest/image?id=</string>
    <string name="send_message">send message</string>
    <string name="error_username_short">Username is short</string>
    <string name="errors_username_long">Username is long</string>
    <string name="errors_password_short">Password is short</string>
    <string name="errors_password_long">Password is long</string>
    <string name="password_mismatch">Password mismatch</string>
	<string name="fight_style">Fight Style</string>
	<string name="fight_experience">Fight Experience</string>
</resources>