<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/item_person"
        android:enabled="true"
        android:icon="@drawable/ic_baseline_person_24"
        android:title="@string/person"
        app:showAsAction="ifRoom"
        />
    <item
        android:id="@+id/item_basket"
        android:enabled="true"
        android:icon="@drawable/ic_baseline_shopping_basket_24"
        android:title="@string/backpack"
        app:showAsAction="ifRoom"
        />

    <item
        android:id="@+id/item_setting"
        android:enabled="true"
        android:icon="@drawable/ic_baseline_settings_24"
        android:title="@string/settings"
        app:showAsAction="never"
        />

</menu>