<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="match_parent"
	android:layout_height="wrap_content"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	style="@style/Theme.Card">

	<androidx.constraintlayout.widget.ConstraintLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_margin="7dp"
		>

		<TextView
			android:id="@+id/text_title"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginStart="7dp"
			android:text="@string/title"
			android:textSize="20sp"
			app:layout_constraintStart_toEndOf="@id/iv_photo"
			app:layout_constraintTop_toTopOf="parent" />

		<TextView
			android:id="@+id/tv_title"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginStart="7dp"
			android:textSize="20sp"
			app:layout_constraintStart_toEndOf="@id/text_title"
			app:layout_constraintTop_toTopOf="parent"
			tools:text="Веселый роджер" />

		<ImageView
			android:id="@+id/iv_photo"
			android:layout_width="110dp"
			android:layout_height="110dp"
			android:src="@drawable/person"
			app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintTop_toTopOf="parent" />

		<TextView
			android:id="@+id/tv_name_text"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginStart="7dp"
			android:text="@string/name"
			android:textSize="20sp"
			app:layout_constraintStart_toEndOf="@id/iv_photo"
			app:layout_constraintTop_toBottomOf="@id/tv_title" />

		<TextView
			android:id="@+id/tv_name"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginStart="7dp"
			android:textSize="20sp"
			app:layout_constraintStart_toEndOf="@id/tv_name_text"
			app:layout_constraintTop_toBottomOf="@id/tv_title"
			tools:text="Gohan" />

		<TextView
			android:id="@+id/tv_lvl_text"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginStart="7dp"
			android:text="@string/lvl"
			android:textSize="20sp"
			app:layout_constraintStart_toEndOf="@id/iv_photo"
			app:layout_constraintTop_toBottomOf="@id/tv_name_text" />

		<TextView
			android:id="@+id/tv_lvl"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginStart="7dp"
			android:textSize="20sp"
			app:layout_constraintStart_toEndOf="@id/tv_lvl_text"
			app:layout_constraintTop_toBottomOf="@id/tv_name_text"
			tools:text="1" />

	</androidx.constraintlayout.widget.ConstraintLayout>

</com.google.android.material.card.MaterialCardView>